--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
 
     <ImageButton
         android:id="@+id/btnBack"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,6 +131,29 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/lyt_univ"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Universitas"
+                android:layout_marginTop="@dimen/margin_medium"
+                app:boxStrokeColor="@color/blue"
+                app:boxStrokeWidth="0dp"
+                app:hintTextColor="@color/blue"
+                app:boxStrokeWidthFocused="0dp"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_medium">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fld_univ"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:background="@drawable/bg_field"
+                    android:textColor="@color/text_color"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lyt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -203,10 +226,10 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_login"
+                android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="Daftar"
                 android:background="@drawable/bg_button"
                 android:textColor="@drawable/bg_button"
                 android:layout_marginTop="@dimen/margin_big"
@@ -222,6 +245,16 @@
 
     </ScrollView>
 
+    <ProgressBar
+        android:id="@+id/idLoadingPB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 
 
