--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Silahkan masuk dengan email \nyang sudah terdaftar di Chatika"
+                android:text="Lengkapi dulu data diri \nkamu di bawah ini"
                 app:layout_constraintTop_toBottomOf="@id/img_logo"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginStart="@dimen/margin_medium"
